# litestar_hotreload

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml  test.yml
examples/: simple.py
examples/templates/: index.html
src/litestar_hotreload/: __init__.py  _notify.py  _watch.py  middleware.py  plugin.py
tests/: test_plugin.py
