[project]
name = "litestar-hotreload"
version = "0.1.0"
description = "Hot reload for Litestar development"
readme = "README.md"
authors = [
    { name = "euri10", email = "benoit.barthelet@gmail.com" }
]
classifiers = [
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["litestar", "hotreload", "development"]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "litestar>=2.15.0",
    "watchfiles>=1.0.4",
]

[project.scripts]
litestar-hotreload = "litestar_hotreload:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage==7.6.12",
    "jinja2>=3.1.5",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.8",
]
examples = [
    "granian>=1.7.6",
    "uvicorn[standard]>=0.34.0",
]

[tool.coverage.run]
branch = true
command_line = "-m pytest"
include = ["src/*", "tests/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
xfail_strict = true



[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "ARG", # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    #        "ERA", # eradicate
    "E", "W", # peycodestyles
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "PIE", # flake8-pie
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "T20", # flake8-print
    "UP", # pyupgrade
    "PLC", # pylint - convention
    "PLE", # pylint - error
    "PLW", # pylint - warning
    "PTH", # flake8-use-pathlib
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.*" = [
    "S101", # flake8-bandit
    "D103", # pydocstyle
    "D100"
]
"examples/**/*.*" = [
    "D103",
    "D100"
]


[tool.mypy]
disallow_untyped_defs = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
namespace_packages = true
ignore_missing_imports = true
